<resources>
    <!-- Hints -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_email_show">Your User ID: %1$s</string>
    <string name="your_email">Your E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>

    <!-- activity_main -->
    <string name="app_name">Smart Box</string>
    <string name="hello">Hello!</string>
    <string name="welcome">Welcome to <b>Smart Box</b></string>
    <string name="create_account">Don\'t have an account? <b>Create</b>!</string>
    <string name="forgotten_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>


    <!-- create_account -->
    <string name="create_account_title">Create Account</string>
    <string name="terms_services">I agree with <u>Terms and services</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Have already an account? <b>Login here!</b></string>

    <!-- my_locks -->
    <string name="my_locks">My Locks!</string>
    <string name="active_locks">Currently you have %1$s locks active</string>

    <!-- settings -->
    <string name="share_multiple_locks">Share Multiple Locks</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="change_email">Change E-mail</string>
    <string name="change_lock_name">Change Lock Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>

    <!-- add_new_lock -->

    <string name="add_new_lock_info">When you a buy a new lock, please check the code displayed on the device after your first login</string>

    <!-- share locks-->
    <string name="share_locks">Share Locks</string>
    <string name="select_lock_id">Select lock <b>ID</b></string>
    <string name="share_with">Share with</string>
    <string name="share_button">Share</string>

    <!-- notifications -->
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow system notifications</string>
    <string name="do_not_disturb">Do not disturb</string>

    <!-- change email-->
    <string name="change_your_email">Change Your E-mail</string>
    <string name="enter_your_old_email">Enter your <b>old</b> e-mail</string>
    <string name="enter_your_new_email">Enter your <b>new</b> e-mail</string>

    <!-- allocate locks -->
    <string name="allocate_locks">Allocate Locks</string>
    <string name="allocate_button">Allocate</string>


    <!-- Change Username -->
    <string name="change_username">Change Username</string>
    <string name="enter_new_username">Enter <b>new</b> username</string>
    <string name="new_display_name">New username</string>
    <string name="confirm_change_button">Confirm Change</string>


    <!-- Change Password -->
    <string name="enter_your_old_password">Enter your <b>old</b> password</string>
    <string name="enter_your_new_password">Enter your <b>new</b> password</string>
    <string name="confirm_your_new_password">Confirm your <b>new</b> password</string>
    <string name="change">Change</string>

    <!-- Profile Page -->
    <string name="change_password">Change Password</string>
    <string name="welcome_to_account">%1$s account</string>
    <string name="change_display_name">Change Username</string>
    <string name="logout"> Logout</string>


    <!-- My Locks (Admin) -->
    <string name="locks">Locks</string>


    <!-- Manual locket setup -->
    <string name="manual_lock_setup">Manual setup of Locker</string>
    <string name="open_wifi_settings">Open Wifi settings</string>
    <string name="connect_wifi">Connect to Wifi "Lock_Conf_XX"</string>
    <string name="return_to_page">Return to this page</string>
    <string name="num1"> 1</string>
    <string name="num2"> 2</string>
    <string name="num3"> 3</string>


    <!-- recover_password -->
    <string name="recover_password">Recover Password</string>
    <string name="send_email">Send</string>
    <string name="instructions_pass_recover">Email to send password recovery</string>

    <!-- Menu Options -->
    <string name="home">User</string>

    <!-- Recover password -->
    <string name="go_back">Return to <b>Login Page</b>!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Locker Page -->

    <string name="last_access_info"><b>Last Accesses</b></string>
    <string name="users_access_info"><b>Users with Access</b></string>
    <string name="update_lock_comment1"><b>Update Lock Comment</b></string>








    <string-array name="array_share_durarion">
        <item> 30 min </item>
        <item> 2 hours </item>
        <item> 4 hours </item>
        <item> 8 hours </item>
        <item> 12 hours </item>
        <item> 24 hours </item>
    </string-array>


    <string name="affirmation2">Lock2Trabalho</string>
    <string name="affirmation1">LockCasa</string>
    <string name="affirmation4">Lock4</string>
    <string name="affirmation3">Lock3</string>
    <string name="affirmation6">LockGinasio</string>
    <string name="affirmation5">Lock5</string>
    <string name="affirmation8">Lock8</string>
    <string name="affirmation7">Lock7</string>
    <string name="affirmation10">LockCasa2</string>
    <string name="affirmation9">Lock9</string>


    <string name="new_lock_name">New Lock Name</string>
    <string name="enter_the_new_lock_name">Enter the <b>new</b> Lock Name</string>
    <string name="name_label">{locker_name}</string>
    <string name="last_accessed">Last Accessed:</string>
    <string name="info"><u>+ info:</u></string>
    <string name="comment"><b><u>Update Lock Comment</u></b></string>
    <string name="changepin"><u>Change Lock Pin</u></string>
    <string name="change_lock_password">Change User #ID Lock Password</string>
    <string name="exit">Go back to <b>My Locks</b></string>
    <string name="old_email">Old Email</string>
    <string name="new_email">New Email</string>
    <string name="access_history"><b>Access History</b></string>
    <string name="users_with_access"><b>Users with access</b></string>
    <string name="users_with_access_1">Users with access:</string>
    <string name="update_lock_pin"><b>Update Lock Pin</b></string>
    <string name="update_lock_comment"><b>Update Lock Comment</b></string>
    <string name="enter_your_old_pin">Enter your <b>old</b> pin</string>
    <string name="enter_your_new_pin">Enter your <b>new</b> pin</string>
    <string name="confirm_your_new_pin">Confirm your <b>new</b> pin</string>
    <string name="lock_old_pin">Old Pin</string>
    <string name="lock_new_pin">New Pin</string>
    <string name="confirm">Confirm</string>
    <string name="shared_by_n_users">This lock is currently shared with %1$s other users</string>
    <string name="share_lock">Share Lock</string>

    <!-- Dialogs -->
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <string name="title_delete_account">Delete Account</string>
    <string name="supporting_text_delete_account">Are you sure you want to delete your account? You won\'t get it back! We know where you live!</string>

    <string name="title_logout_account">Logout</string>
    <string name="supporting_text_logout_account">Are you sure you want to logout from your account?</string>
    <string name="share_lock1"><b>Share Lock</b></string>
    <string name="add_new_lock">Add New Lock</string>

    <string name="title_remove_account">Remove User</string>
    <string name="supporting_text_remove_account">Are you sure you want to remove the <b>%1$s</b> from this lock?</string>
    <string name="supporting_text_remove_self">Are you sure you want to remove yourself from this lock?</string>

</resources>