<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:text="@string/update_lock_pin"
        android:textColor="@color/Text_Bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_old_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_your_old_pin"
        android:textSize="15sp"
        android:textColor="@color/Text_Bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"

        app:layout_constraintTop_toBottomOf="@+id/enter_old_pin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_pin_text"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_boxes"
            android:gravity="center"
            android:hint="@string/lock_old_pin"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/enter_new_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_your_new_pin"
        android:textSize="15sp"
        android:textColor="@color/Text_Bold"
        app:layout_constraintStart_toStartOf="@+id/enter_old_pin"
        app:layout_constraintTop_toBottomOf="@+id/old_pin" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_new_pin"
        app:layout_constraintStart_toStartOf="@+id/old_pin"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pin_text"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_boxes"            android:hint="@string/lock_new_pin"
            android:inputType="numberPassword"
            android:gravity="center"
            android:maxLength="4"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_new_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_your_new_pin"
        android:textSize="15sp"
        android:textColor="@color/Text_Bold"
        app:layout_constraintStart_toStartOf="@+id/enter_new_pin"
        app:layout_constraintTop_toBottomOf="@+id/new_pin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pin_confirmation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_pin"
        app:layout_constraintStart_toStartOf="@+id/new_pin"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pin_confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_boxes"
            android:hint="@string/lock_new_pin"
            android:textColorHint="@color/Text_Bold"
            android:inputType="numberPassword"
            android:gravity="center"
            android:maxLength="4"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_view_blue"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:layout_marginVertical="40dp"
        android:paddingHorizontal="24dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/pin_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>