<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ProfilePageFragment">

    <Button
        android:id="@+id/your_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="45dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_view"
        android:drawableLeft="@android:drawable/ic_menu_myplaces"
        android:text="@string/your_email"
        android:textColor="@color/blue_buttons"
        app:startIconDrawable="@drawable/search_icon"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_view"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#F6F1D1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:rotation="1"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave" />


    <TextView
        android:id="@+id/welcome_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/welcome_to_account"
        android:textColor="@color/Text_Bold"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_username"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="45dp"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_view"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:text="@string/change_display_name"
        android:textColor="@color/blue_buttons"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="45dp"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_view"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:text="@string/change_password"
        android:textColor="@color/blue_buttons"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_email" />

</androidx.constraintlayout.widget.ConstraintLayout>